# demiurge

./: .gitignore  CLA.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  rust-toolchain.toml
.cargo/: config.toml
.github/: pull_request_template.md
.github/actions/setup-rust/: action.yml
.github/workflows/: bpf.yml  ci.yml  design-conformance.yml  gate-phase.yml  gate-reusable.yml  gate.yml  publish-linux.yml  release.yml  spec.yml
bpf/: admit_shed.bpf.c
crates/demiurge-auth/: Cargo.toml
crates/demiurge-auth/src/: lib.rs  secret.rs
crates/demiurge-control/: Cargo.toml
crates/demiurge-control/src/: corrector_grad.rs  corrector_shadow.rs  fleet_pilot.rs  fleet_sim.rs  lib.rs  migration.rs  pairing.rs  predictor.rs  pressure.rs  rdma_cost_shadow.rs  rebalancer.rs  scored.rs
crates/demiurge-control/tests/: fleet_sim_integration.rs  ledger_proptest.rs
crates/demiurge-cost/: Cargo.toml
crates/demiurge-cost/src/: generated_params.rs  kv.rs  lib.rs  rdma.rs  warmth.rs
crates/demiurge-cost/tests/: dynamo_contrast.rs  positivity.rs
crates/demiurge-dataplane/: Cargo.toml
crates/demiurge-dataplane/src/: admission.rs  admit_mode.rs  forwarder.rs  forwarder_io_uring.rs  lib.rs  rcu.rs  xdp.rs  xdp_linux.rs
crates/demiurge-dataplane/tests/: admission.rs  admit_proptest.rs  bpf_admit_model.rs  rcu.rs  stall.rs  xdp_veth.rs
crates/demiurge-handoff/: Cargo.toml
crates/demiurge-router/: Cargo.toml
crates/demiurge-router/src/: backend.rs  banner.rs  config.rs  http.rs  lib.rs  main.rs  routing.rs  serve.rs  testutil.rs
crates/demiurge-router/tests/: forward.rs  forward_io_uring.rs  harden.rs  p1_route.rs  p2_kv.rs  p3_warmth.rs  p4_pairing.rs  p5_dataplane.rs  p7_cache_isolation.rs  p7_live_wire.rs  rdma_shadow.rs  track_a.rs
crates/demiurge-state/: Cargo.toml
crates/demiurge-state/src/: gossip.rs  lib.rs  snapshot.rs  warmth.rs
crates/demiurge-state/tests/: ap.rs
design/: bench-gates.toml  demiurge.params.toml  fleet-economics.toml  fleet-pilot.toml  load-bench.toml  requirements.toml
design/apostrophe-sim/: README.md
design/topologies/: README.md
design/traces/: synthetic-fleet-heavy-only.jsonl  synthetic-fleet.jsonl
design/track-d/: README.md
design/validation/: README.md
docs/: PRODUCT-AND-DESIGN.md  THREAT-MODEL.md
docs/papers/: Makefile  README.md  cost-algebra.tex
scripts/: apostrophe-sim.sh  bootstrap.sh  build-bpf.sh  compile-product-doc.sh  ensure-rust-toolchain.sh  gate.sh  gen.sh  generate-one-pager.sh  generate-product-doc.sh  generate-sim-report.sh  gh-release-upload.sh  harden-verify.sh  load-bench.sh  load-stress.sh  pr-policy.sh  pre-release.sh  publish.sh  track-a-verify.sh  track-b-bench.sh  track-b-gate.sh  track-b-verify.sh  track-c-verify.sh  verify.sh  xdp-veth-smoke.sh
scripts/apostrophe-sim/: docker-compose.yml
scripts/lib/: ui.sh
scripts/linux-vm/: README.md  Vagrantfile  bootstrap-guest.sh  bootstrap-offline.sh  cloud-init.yaml  create-multipass.sh  create-vbox.sh  docker-track-b.sh  fix-multipass-mount.sh  fix-multipass-network.sh  prepare-offline-bundle.sh  push-repo.sh  vagrant-provision.sh  vagrant-up.sh
scripts/singularity/: README.md  benchmark-all.sh  bootstrap.sh  prefill_handoff_shim.py  restart-handoff-shims.sh  start-router.sh  start-vllm-pd.sh  track-c-live-smoke.py  warmth-prefix-bench.py
scripts/track-d/: README.md
scripts/verify/: common.sh  harden-all.sh  report.sh  tier1-admit.sh  tier2-faults.sh  tier3-proptest.sh  tier4-load.sh  tier4-stress.sh
spec/: demiurge.tex  preamble-req.tex
xtask/: Cargo.toml
xtask/src/: ab_bench.rs  apostrophe_sim.rs  bench_flame.rs  bench_gate.rs  fleet_pilot.rs  harden_report.rs  harden_verify.rs  load_bench.rs  main.rs  pseudo_report.rs  pseudo_ui.rs  track_b_load.rs
xtask/tests/: blur_guard.rs
(+8 files in other folders)
