[workspace]
resolver = "2"
members = [
    "crates/demiurge-auth",
    "crates/demiurge-cost",
    "crates/demiurge-control",
    "crates/demiurge-dataplane",
    "crates/demiurge-handoff",
    "crates/demiurge-router",
    "crates/demiurge-state",
    "xtask",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/fxdv/demiurge"

[profile.release]
lto = "thin"
