[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
demiurge-cost = { path = "../crates/demiurge-cost" }
demiurge-router = { path = "../crates/demiurge-router" }
toml = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
