[package]
name = "demiurge-dataplane"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "RCU routing table and L4 admission shed for the Demiurge data plane."

[dependencies]
arc-swap = "1"
demiurge-cost = { path = "../demiurge-cost" }

[target.'cfg(target_os = "linux")'.dependencies]
aya = "0.13.1"
io-uring = "0.7.8"
libc = "0.2"

[dev-dependencies]
proptest = "1"
