[package]
name = "demiurge-router"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Minimal phase-aware, cost-based forwarder for the Demiurge load balancer."

[[bin]]
name = "demiurge-router"
path = "src/main.rs"

[lib]
name = "demiurge_router"
path = "src/lib.rs"

[dependencies]
demiurge-cost = { path = "../demiurge-cost" }
demiurge-control = { path = "../demiurge-control" }
demiurge-dataplane = { path = "../demiurge-dataplane" }
demiurge-handoff = { path = "../demiurge-handoff" }
demiurge-state = { path = "../demiurge-state" }

[dev-dependencies]
tempfile = "3"
