[package]
name = "demiurge-state"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Eventually-consistent state plane: warmth maps, occupancy, and gossip."

[dependencies]
demiurge-auth = { path = "../demiurge-auth" }
demiurge-cost = { path = "../demiurge-cost" }

[dev-dependencies]
